Changelog
=========

UP
-----

    - zc.buildout 1.5 support


2.4.9
------

    - Snowleopard and crossplatform fix according to related 
      minitage.recipe.egg improvments (r.platform_scan() adds)

2.4.8
------

    - more distribute friendly

2.4.2
---------

    - offline mode bugfix

2.4.1
------

    - up tests

2.4.0
------

    - more robust code for monkey patch

2.3.9
-------

    - up to minitage.recipe.*

-> 2.3.8
-----------

    - fix tests
    - add minitage-globalenv

2.3.3 -> 2.3.5
------------------

    - filtration of scripts

2.3
-----

    - fix buildout initialization problem

2.1 -> 2.2
---------------

    * fix tests (the only 2.2 change is in the test;)
    * bugfix on egg cache searching
    * bugfix on scripts filtering

2.0
-----

    - 1.0 compatibility
    - zc.recipe.cmmi is now wrapped

1.6
-----

* Get an absolute path for python!

1.5
--------

* Refactor code
* Add a wrapper to zc.buildout.easy_install.scripts
* Make it work with relative-paths

1.4
---------

* code cometics

1.1  -> 1.2
------------

* packaging

1.0
----------------
* Initial release