@@ -5,6 +5,7 @@ UP
 -----
 
     - zc.buildout 1.5 support
+    - compatibility with buildout.dumppickedversions
 
 
 2.4.9
